feat: add computer use plugin
